--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,42 @@
-.tausta {
-  margin: 30px;
+.container {
+  margin-top: 50px;
 }
 
-div {
-  margin-bottom: 20px;
+footer .container {
+  margin-top: 0;
 }
 
-input {
-  display:inline-block;
-  padding: 3px;
-  width: 300px;
+footer {
+  position: fixed;
+  bottom: 0;
+  padding-top: 10px;
+  width: 100%;
+  height: 60px;
+  border-top: 2px solid #f5f5f5;
+  background-size: cover;
+  text-align: center;
+  background-color: #333;
+  color: #fff;
 }
 
-output {
-  display:inline-block;
-  padding: 3px;
-  width: 300px;
+
+
+#nav {
+  margin-bottom: 0!important;
+  background-color: #333;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
-button {
-  font-size: large;
-  padding: 5px;
-  background-color: rgb(50, 130, 255);
-  color: white;
+th, a {
+  color: #fff;
+  padding: 1em;
+  text-decoration: none !important;
 }
 
-input[type="number"] {
-  -moz-appearance:textfield;
+#header {
+  background-image: url(./waterforest.jpg);
+  height: 300px;
+  width: 100%;
+  background-size: cover;
 }
